New Fixture: More of Regulation dispatches

--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -1,5 +1,20 @@
+label.sideBar.regulation.dispatch.manage = Regulation Dispatch
+
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Name
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = # Entries
+
+label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Name
+
+label.remove=Remove
+
 label.workflow.meta.type.name = Dispatches
 label.workflow.meta.type.description = This application manage regulation dispatches
 label.workflow.meta.type.field.emissionDate = Emission date
 label.workflow.meta.type.field.regulation = Regulation
 label.workflow.meta.type.field.regulation.reference = Reference
+
+link.node.configuration.regulation.dispatch.interface = Regulation Dispatch Management
+
+message.remove.confirmation = Do you wish to remove this user?
+
+title.node.configuration.module.regulation.dispatch = Regulation Dispatches
