--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -1,5 +1,22 @@
+label.sideBar.regulation.dispatch.manage = Despachos
+
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Nome
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = Nº registos
+
+label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Nome
+
+label.remove=Remover
+
 label.workflow.meta.type.name = Despachos
 label.workflow.meta.type.description = Esta aplicação gere os despachos
 label.workflow.meta.type.field.emissionDate = Data de emissão
 label.workflow.meta.type.field.regulation = Regulamento
 label.workflow.meta.type.field.regulation.reference = Referência
+
+
+link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
+
+message.remove.confirmation = Deseja remover o utilizador da fila?
+
+title.node.configuration.module.regulation.dispatch = Despachos
+
