--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -4,8 +4,33 @@ label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Name
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = # Entries
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Name
+label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd = User
 
-label.remove=Remove
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference = Reference
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate = Emission date
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription = Description
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference = Regulation
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor = Emissor
+
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Reference
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Emission date
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Description
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
+
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference = Ref.
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emission
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Description
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulation
+
+link.remove = Remove
+link.view = View
+link.edit = Edit
+link.view.document = View document
+
+label.edit = Edit
+label.remove = Remove
+label.view = View
 
 label.workflow.meta.type.name = Dispatches
 label.workflow.meta.type.description = This application manage regulation dispatches
@@ -15,6 +40,9 @@ label.workflow.meta.type.field.regulation.reference = Reference
 
 link.node.configuration.regulation.dispatch.interface = Regulation Dispatch Management
 
+message.regulation.dispatches.empty = There is no inserted entries
 message.remove.confirmation = Do you wish to remove this user?
+
+myorg.domain.User.presentationName = Name
 
 title.node.configuration.module.regulation.dispatch = Regulation Dispatches
