--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -4,8 +4,46 @@ label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = Nº registos
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Nome
+label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd = Utilizador
 
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference = Referência
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference = Regulamento
+label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor = Emissor
+
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.regulationReference = Regulamento
+
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference = Ref.
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emissão
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
+
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
+label.module.regulation.dispatch.domain.IRegulationDispatchEntry.regulationReference = Regulamento  
+
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Referência
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Data de emissão
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.dispatchDescription = Descrição
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulamento
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
+
+link.remove=Remover
+link.view = Visualizar
+link.edit = Editar
+link.view.document = Visualizar Documento
+
+label.edit = Editar
 label.remove=Remover
+label.view = Visualizar
 
 label.workflow.meta.type.name = Despachos
 label.workflow.meta.type.description = Esta aplicação gere os despachos
@@ -16,7 +54,10 @@ label.workflow.meta.type.field.regulation.reference = Referência
 
 link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
 
+message.regulation.dispatches.empty = Não existem registos
 message.remove.confirmation = Deseja remover o utilizador da fila?
+
+myorg.domain.User.presentationName = Nome
 
 title.node.configuration.module.regulation.dispatch = Despachos
 
