New Fixture: More of Regulation dispatches

--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -22,11 +22,20 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.em
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Description
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulation
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = File
 
+link.download = Download
 link.remove = Remove
 link.view = View
 link.edit = Edit
 link.view.document = View document
+
+link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Main document
+
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Name
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Creation date 
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active = Active
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument = Main document
 
 label.edit = Edit
 label.remove = Remove
