--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -22,6 +22,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.re
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emissão
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Descrição
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor.name = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
 
 label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
@@ -35,11 +36,21 @@ label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInf
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.dispatchDescription = Descrição
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = Ficheiro
 
+link.download = Download
 link.remove=Remover
 link.view = Visualizar
 link.edit = Editar
 link.view.document = Visualizar Documento
+
+link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Doc. principal
+
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Nome
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Data de criação 
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.active = Activo
+label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.mainDocument = Doc. Principal
+
 
 label.edit = Editar
 label.remove=Remover
