New Fixture: More of Regulation dispatches

--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -1,3 +1,6 @@
+button.yes = Yes
+button.no = No
+
 label.sideBar.regulation.dispatch.manage = Regulation Dispatch
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Name
@@ -12,25 +15,36 @@ label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference = Regulation
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor = Emissor
 
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Reference
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Emission date
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Description
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
-
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference = Ref.
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emission
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Description
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulation
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations = OPbservations
+
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Reference
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Emission date
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.dispatchDescription = description
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulation
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = File
 
+link.cancel = Cancel
+link.create = Create
 link.download = Download
 link.remove = Remove
 link.view = View
 link.edit = Edit
 link.view.document = View document
+link.back = Back
+link.edit = Edit
+link.submit = Submit
+
 
 link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Main document
+
+link.regulation.dispatch.systems.management = System management
+link.regulation.dispatch.create.entry = Create entry
 
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Name
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Creation date 
@@ -51,7 +65,23 @@ link.node.configuration.regulation.dispatch.interface = Regulation Dispatch Mana
 
 message.regulation.dispatches.empty = There is no inserted entries
 message.remove.confirmation = Do you wish to remove this user?
+message.none.regulation.dispatch.systems = You are not in any systems
+message.please.choose.one.of.systems.below = Please choose one system
+message.regulation.dispatch.management.system = Click in this link for dispatch systems management
+message.upload.documents.pdf.maximum.8mb = You can only submit documents with pdf extension and the maximum size is 8 Mb
+message.regulation.dispatch.confirmation = Do you wish to remove this entry?
 
 myorg.domain.User.presentationName = Name
 
+title.dispatch = Dispatch
+title.documents = Documents
+title.observations = Observations
+
 title.node.configuration.module.regulation.dispatch = Regulation Dispatches
+title.regulation.dispatch = Dispatch management
+title.regulation.dispatch.creation = Dispatch creation
+title.regulation.dispatch.system.management = System management
+title.regulation.dispatch.edition = Dispatch edition
+title.regulation.dispatch.removal = Dispatch removal
+title.upload.documents = Document upload
+
