--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -1,3 +1,6 @@
+button.yes = Sim
+button.no = Não
+
 label.sideBar.regulation.dispatch.manage = Despachos
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Nome
@@ -12,24 +15,13 @@ label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor = Emissor
 
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Data de emissão
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Descrição
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.regulationReference = Regulamento
-
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference = Ref.
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissionDate = Emissão
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.dispatchDescription = Descrição
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor.name = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
-
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.reference = Referência
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissionDate = Data de emissão
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.dispatchDescription = Descrição
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.emissor = Emissor
-label.module.regulation.dispatch.domain.IRegulationDispatchEntry.regulationReference = Regulamento  
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations = Observações
 
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Referência
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Data de emissão
@@ -38,13 +30,23 @@ label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInf
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = Ficheiro
 
+link.cancel = Cancelar
+link.create = Criar
 link.download = Download
 link.remove=Remover
 link.view = Visualizar
 link.edit = Editar
 link.view.document = Visualizar Documento
+link.back = Voltar
+link.edit = Editar
+link.submit = Submeter
 
 link.module.regulation.dispatch.domain.RegulationDispatchProcessFile.asMainDocument = Doc. principal
+
+link.regulation.dispatch.systems.management = Gestão de sistemas
+link.regulation.dispatch.create.entry = Criar registo
+
+link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
 
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.displayName = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchProcessFile.creationDate = Data de criação 
@@ -63,12 +65,24 @@ label.workflow.meta.type.field.regulation = Regulamento
 label.workflow.meta.type.field.regulation.reference = Referência
 
 
-link.node.configuration.regulation.dispatch.interface = Gestão dos Despachos
-
 message.regulation.dispatches.empty = Não existem registos
 message.remove.confirmation = Deseja remover o utilizador da fila?
+message.none.regulation.dispatch.systems = Não está inserido em nenhum dos sistemas de gestão de despachos
+message.please.choose.one.of.systems.below = Escolha um dos sistemas.
+message.regulation.dispatch.management.system = Clique neste link para a gestão de sistemas de despachos
+message.upload.documents.pdf.maximum.8mb = Só poderá submeter documentos em pdf com o tamanho máximo de 8 Mb.
+message.regulation.dispatch.confirmation = Deseja remover o registo?
 
 myorg.domain.User.presentationName = Nome
 
-title.node.configuration.module.regulation.dispatch = Despachos
+title.dispatch = Despacho
+title.documents = Documentos
+title.observations = Observações
 
+title.node.configuration.module.regulation.dispatch = Despachos
+title.regulation.dispatch = Gestão dos despachos
+title.regulation.dispatch.creation = Criação do despacho
+title.regulation.dispatch.system.management = Gestão de sistemas
+title.regulation.dispatch.edition = Edição do despacho
+title.regulation.dispatch.removal = Remoção do despacho
+title.upload.documents = Upload de documentos
