New Fixture: Regulation Dispatches Management Modules. Added articles field to dispatches

--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -21,6 +21,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.di
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulation
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations = OPbservations
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.articles = Articles
 
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Reference
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Emission date
@@ -28,6 +29,7 @@ label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInf
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulation
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = File
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.articles = Articles
 
 link.cancel = Cancel
 link.create = Create
@@ -60,6 +62,7 @@ label.workflow.meta.type.description = This application manage regulation dispat
 label.workflow.meta.type.field.emissionDate = Emission date
 label.workflow.meta.type.field.regulation = Regulation
 label.workflow.meta.type.field.regulation.reference = Reference
+label.workflow.meta.type.field.articles = Articles
 
 link.node.configuration.regulation.dispatch.interface = Regulation Dispatch Management
 
@@ -70,6 +73,7 @@ message.please.choose.one.of.systems.below = Please choose one system
 message.regulation.dispatch.management.system = Click in this link for dispatch systems management
 message.upload.documents.pdf.maximum.8mb = You can only submit documents with pdf extension and the maximum size is 8 Mb
 message.regulation.dispatch.confirmation = Do you wish to remove this entry?
+message.regulation.dispatch.documents.empty = This entry does not contain any documents
 
 myorg.domain.User.presentationName = Name
 
