--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -22,6 +22,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.em
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.emissor.name = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations = Observações
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.articles = Artigos
 
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.reference = Referência
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissionDate = Data de emissão
@@ -29,6 +30,7 @@ label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInf
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.regulationReference = Regulamento
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.emissor = Emissor
 label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.file = Ficheiro
+label.module.regulation.dispatch.domain.activities.RegulationDispatchActivityInformation.articles = Artigos
 
 link.cancel = Cancelar
 link.create = Criar
@@ -63,7 +65,7 @@ label.workflow.meta.type.description = Esta aplicação gere os despachos
 label.workflow.meta.type.field.emissionDate = Data de emissão
 label.workflow.meta.type.field.regulation = Regulamento
 label.workflow.meta.type.field.regulation.reference = Referência
-
+label.workflow.meta.type.field.articles = Artigos
 
 message.regulation.dispatches.empty = Não existem registos
 message.remove.confirmation = Deseja remover o utilizador da fila?
@@ -72,6 +74,7 @@ message.please.choose.one.of.systems.below = Escolha um dos sistemas.
 message.regulation.dispatch.management.system = Clique neste link para a gestão de sistemas de despachos
 message.upload.documents.pdf.maximum.8mb = Só poderá submeter documentos em pdf com o tamanho máximo de 8 Mb.
 message.regulation.dispatch.confirmation = Deseja remover o registo?
+message.regulation.dispatch.documents.empty = Este registo não contém nenhum documento
 
 myorg.domain.User.presentationName = Nome
 
