Minor Change: Finish dispatch queue management

--- a/conf/resources/RegulationDispatchResources_pt.properties
+++ b/conf/resources/RegulationDispatchResources_pt.properties
@@ -1,10 +1,13 @@
+button.add = Adicionar
 button.yes = Sim
 button.no = Não
+
+error.regulation.dispatch.queue.user.already.in.queue = O utilizador já está registo no sistema
 
 label.sideBar.regulation.dispatch.manage = Despachos
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Nome
-label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = Nº registos
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.processesCount = Nº registos
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Nome
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd = Utilizador
@@ -68,7 +71,7 @@ label.workflow.meta.type.field.regulation.reference = Referência
 label.workflow.meta.type.field.articles = Artigos
 
 message.regulation.dispatches.empty = Não existem registos
-message.remove.confirmation = Deseja remover o utilizador da fila?
+message.regulation.dispatch.remove.confirmation = Deseja remover o despacho?
 message.none.regulation.dispatch.systems = Não está inserido em nenhum dos sistemas de gestão de despachos
 message.please.choose.one.of.systems.below = Escolha um dos sistemas.
 message.regulation.dispatch.management.system = Clique neste link para a gestão de sistemas de despachos
@@ -86,6 +89,9 @@ title.node.configuration.module.regulation.dispatch = Despachos
 title.regulation.dispatch = Gestão dos despachos
 title.regulation.dispatch.creation = Criação do despacho
 title.regulation.dispatch.system.management = Gestão de sistemas
+title.regulation.dispatch.system.properties = Propriedades do sistema
 title.regulation.dispatch.edition = Edição do despacho
 title.regulation.dispatch.removal = Remoção do despacho
 title.upload.documents = Upload de documentos
+title.users = Utilizadores
+title.users.add = Adicionar utilizador
