--- a/conf/resources/RegulationDispatchResources_en.properties
+++ b/conf/resources/RegulationDispatchResources_en.properties
@@ -1,10 +1,13 @@
+button.add = Add
 button.yes = Yes
 button.no = No
+
+error.regulation.dispatch.queue.user.already.in.queue = User is already in the system
 
 label.sideBar.regulation.dispatch.manage = Regulation Dispatch
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueue.name = Name
-label.module.regulation.dispatch.domain.RegulationDispatchQueue.processCount = # Entries
+label.module.regulation.dispatch.domain.RegulationDispatchQueue.processesCount = # Entries
 
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.name = Name
 label.module.regulation.dispatch.domain.RegulationDispatchQueueBean.userToAdd = User
@@ -67,7 +70,7 @@ label.workflow.meta.type.field.articles = Articles
 link.node.configuration.regulation.dispatch.interface = Regulation Dispatch Management
 
 message.regulation.dispatches.empty = There is no inserted entries
-message.remove.confirmation = Do you wish to remove this user?
+message.regulation.dispatch.remove.confirmation = Do you wish to remove this dispatch?
 message.none.regulation.dispatch.systems = You are not in any systems
 message.please.choose.one.of.systems.below = Please choose one system
 message.regulation.dispatch.management.system = Click in this link for dispatch systems management
@@ -85,7 +88,9 @@ title.node.configuration.module.regulation.dispatch = Regulation Dispatches
 title.regulation.dispatch = Dispatch management
 title.regulation.dispatch.creation = Dispatch creation
 title.regulation.dispatch.system.management = System management
+title.regulation.dispatch.system.properties = System properties
 title.regulation.dispatch.edition = Dispatch edition
 title.regulation.dispatch.removal = Dispatch removal
 title.upload.documents = Document upload
-
+title.users = Users
+title.users.add = Add user
