Changed to search only on active processes. Fixed some labels. Fixed cancel destination for edit and remove activities

--- a/src/main/resources/resources/RegulationDispatchResources_en.properties
+++ b/src/main/resources/resources/RegulationDispatchResources_en.properties
@@ -25,6 +25,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.re
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference            = Regulation
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription          = Description
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate                 = Emission date
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.requestorUser.displayName      = Emissor
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissor                      = Emissor
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.reference                    = Reference
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.regulationReference          = Regulation
