--- a/src/main/resources/resources/RegulationDispatchResources_pt.properties
+++ b/src/main/resources/resources/RegulationDispatchResources_pt.properties
@@ -23,6 +23,7 @@ label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.in
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.observations                   = Observa\u00E7\u00F5es
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.reference                      = Ref.
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.regulationReference            = Regulamento
+label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.requestorUser.displayName      = Emissor
 label.module.regulation.dispatch.domain.RegulationDispatchWorkflowMetaProcess.requestorUser.name             = Emissor
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.dispatchDescription          = Descri\u00E7\u00E3o
 label.module.regulation.dispatch.domain.activities.CreateRegulationDispatchBean.emissionDate                 = Data de emiss\u00E3o
